로그인 화면으로 첫 화면 지정, 앱 이름 'IdeaBoard' -> '눈사슴' 변경, 프로필 관심있는 아이디어 터치시 PostFragment로 바뀜.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">IdeaBoard</string>
+    <string name="app_name">눈사슴</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
